src/app/globals.css
@import 'tailwindcss';

:root {
  --color-bg: #ffffff;
  --color-surface: #f6f7fb;
  --color-border: #e1e4ed;

  --color-header: #f8f9fc;

  --color-primary: #4a5bff;
  --color-primary-foreground: #ffffff;

  --color-text: #171717;
  --color-text-muted: #7a7d9c;
  --color-text-secondary: #77819f;
  --color-subtitle: #4a5bff;

  --color-nav-hover: #4a5bff;

  --color-icon: #7f56d9;
  --color-icon-secondary: #5865f2;

  --font-sans: var(--font-raleway), var(--font-inter);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-bg: #141219;
    --color-surface: #1e1c26;
    --color-border: #2a2734;

    --color-header: #15141d;

    --color-primary: #7286ff;
    --color-primary-foreground: #ffffff;

    --color-text: #ffffff;
    --color-text-muted: #7a7d9c;
    --color-text-secondary: #8f9bb7;
    --color-subtitle: #7286ff;

    --color-icon: #7f56d9;
    --color-icon-secondary: #5865f2;

    --color-nav-hover: #a8b3ff;
  }
}

@theme inline {
  --color-background: var(--color-bg);
  --color-foreground: var(--color-text);

  --color-surface: var(--color-surface);
  --color-border: var(--color-border);

  --color-primary: var(--color-primary);
  --color-primary-foreground: var(--color-primary-foreground);

  --color-muted: var(--color-text-muted);
  --color-secondary: var(--color-text-secondary);
  --color-subtitle: var(--color-subtitle);

  --color-nav-hover: var(--color-nav-hover);

  --color-header: var(--color-header);

  --color-icon: var(--color-icon);
  --color-icon-secondary: var(--color-icon-secondary);

  --font-sans: var(--font-raleway), var(--font-inter);
}

::-webkit-scrollbar {
  height: 8px;
  width: 8px;
}

::-webkit-scrollbar-track {
  background: var(--color-surface);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb {
  background: var(--color-primary);
  border: 1px solid #000;
  border-radius: 4px;
}

body {
  background: var(--color-surface);
  color: var(--color-text);
  font-family: var(--font-sans), Arial, Helvetica, sans-serif;
  overflow-x: hidden;
}

.font-inter {
  font-family: var(--font-inter), Arial, Helvetica, sans-serif;
}

